--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ambiguisjs",
-  "version": "1.0.3",
+  "name": "ambiguis",
+  "version": "1.0.4",
   "description": "reponsive tool",
   "main": "ambiguis.js",
   "scripts": {
@@ -23,18 +23,12 @@
   "homepage": "https://github.com/Rlilyyy/AmbiguisJS#readme",
   "devDependencies": {
     "babel-core": "^6.10.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
     "babel-preset-es2015": "^6.9.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-minify": "0.0.12",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.13.1"
   }
 }
