--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "phone]"
   ],
   "author": "Rlilyyy",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Rlilyyy/AmbiguisJS/issues"
   },
