--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "url": "git+https://github.com/Rlilyyy/AmbiguisJS.git"
   },
   "keywords": [
-    "[responsive",
+    "responsive",
     "mobile",
-    "phone]"
+    "phone"
   ],
   "author": "Rlilyyy",
   "license": "MIT",
